fixed layout bug on mobile

--- a/src/components/Section/styles.module.css
+++ b/src/components/Section/styles.module.css
@@ -28,10 +28,22 @@
 
 @media screen and (width >= 768px) {
   .storiesWrapper {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 3rem;
   }
   .noStories {
     min-height: 300px;
+  }
+}
+
+@media screen and (width >= 1024px) {
+  .storiesWrapper {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (width >= 1144px) {
+  .storiesWrapper {
+    grid-template-columns: repeat(4, 1fr);
   }
 }
