--- a/src/components/Story/styles.module.css
+++ b/src/components/Story/styles.module.css
@@ -1,6 +1,6 @@
 .wrapper {
   background-color: lightseagreen;
-  min-width: 39.8rem;
+  max-width: 39.8rem;
   min-height: 58.65rem;
   padding: 3rem;
   display: flex;
